--- a/src/Home.module.scss
+++ b/src/Home.module.scss
@@ -2,7 +2,7 @@
   body {
     font-family: 'Cinzel', serif;
     font-size: 16px;
-    background: radial-gradient(ellipse at center, #f04825 40%,#b7371d 100%);
+    background: radial-gradient(ellipse at center, #ca3c20 40%,#6b2010 100%);
     color: white;
     // text-shadow: 0 0 6px rgba(0,0,0,0.7);
     text-transform: lowercase;
@@ -32,7 +32,7 @@
   background-image: url('micosay-logo-white.svg');
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 50%;
+  background-size: 100%;
   .title {
     width: 100vw;
     h1 {
