--- a/src/routes/slides/Slides.module.scss
+++ b/src/routes/slides/Slides.module.scss
@@ -4,3 +4,13 @@
   background-color: black;
   color: white;
 }
+
+:local {
+  .photo-container {
+    width: 100vw;
+    height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: auto;
+  }
+}
