--- a/src/routes/roll/Roll.module.scss
+++ b/src/routes/roll/Roll.module.scss
@@ -28,7 +28,7 @@ body {
   // align-content: center;
   width: 100%;
   height: 100vh;
-  background-image: url('micosay-logo-white.svg');
+  background-image: url('../../micosay-logo-white.svg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100%;
