--- a/src/routes/roll/Roll.module.scss
+++ b/src/routes/roll/Roll.module.scss
@@ -45,6 +45,9 @@ body {
   background-size: 100%;
   font-family: 'Cinzel', serif;
   font-size: 16px;
+  font-smooth: always;
+  -webkit-font-smoothing: subpixel-antialiased;
+  -moz-osx-font-smoothing: grayscale;
   text-transform: lowercase;
   .title {
     width: 100vw;
