--- a/src/routes/menu/Menu.module.scss
+++ b/src/routes/menu/Menu.module.scss
@@ -2,30 +2,59 @@
   display: flex;
   flex-flow: column;
   min-height: 100vh;
-  max-width: 45em;
+  max-width: 100%;
   margin: auto;
-  background-color: #fefefe;
+  background-color: #2d313d;
+  color: #b3b5b6;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   line-height: 1.4;
-  footer {
-    padding: 0.25em 0.5em;
-    background-color: #dadada;
-    text-align: center;
-  }
   header {
     display: flex;
+    margin: 2rem auto auto;
+    padding-bottom: 1rem;
+    width: 62rem;
+    border-bottom: 1px solid #b3b5b6;
     img {
       max-width: 6em;
       height: auto;
     }
-    h1 {
-      margin-left: 0.5em;
-      font-size: 4rem;
+    .title {
+      padding-left: 2rem;
+      h1 {
+        margin: 0;
+        font-size: 4rem;
+      }
+      p { margin: 0; }
     }
   }
-  li {
-    font-size: 2rem;
-    margin-bottom: 0.25rem;
+  nav {
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+    width: 62rem;
+    flex: 1;
+    ul {
+     padding: 0;
+     margin: 0;
+     list-style-type: none;
+    }
+    li {
+      font-size: 1.8rem;
+      margin-bottom: 1rem;
+      text-align: center;
+      a {
+        padding: 1rem;
+        display: block;
+        background-color: lighten(#2d313d, 5%);
+        border: 1px solid lighten(#2d313d, 20%);
+        border-radius: 8px;
+        text-decoration: none;
+        color: #b3b5b6;
+        transition: background-color 125ms ease-in-out;
+        &:hover {
+          background-color: darken(#2d313d, 2%);
+        }
+      }
+    }
   }
-  nav { flex: 1; }
 }
