--- a/src/routes/menu/Menu.module.scss
+++ b/src/routes/menu/Menu.module.scss
@@ -15,7 +15,7 @@
     width: 62rem;
     border-bottom: 1px solid #b3b5b6;
     img {
-      max-width: 6em;
+      width: 120px;
       height: auto;
     }
     .title {
