--- a/src/routes/roll/Roll.module.scss
+++ b/src/routes/roll/Roll.module.scss
@@ -35,9 +35,10 @@ body {
 .guardian-container {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
+  // justify-content: space-between;
   width: 100%;
   height: 100vh;
+  padding-right: 2rem;
   background-image: url('../../micosay-logo-white.svg');
   background-repeat: no-repeat;
   background-position: center;
@@ -65,13 +66,27 @@ body {
   -moz-osx-font-smoothing: grayscale;
   text-transform: lowercase;
 }
+.loader {
+  width: 200px;
+  height: 200px;
+  margin: auto;
+  padding-right: 2.5rem;
+
+  // display: flex;
+  // align-items: center;
+  // justify-content: center;
+}
 .longList {
   animation: 10s ease-out fader;
   animation-iteration-count: infinite;
   width: 20vw;
   height: 5vh;
-  .guardian-name { font-size: 1rem; }
-  .tribal-name { font-size: 0.6rem; }
+  .guardian-name { font-size: 1.125rem; }
+  .tribal-name { 
+    width: 75%;
+    margin: auto;
+    font-size: 0.75rem; 
+  }
 }
 .reset { opacity: 0; }
 .shortList {
@@ -79,6 +94,7 @@ body {
   animation-iteration-count: infinite;
   width: 22vw;
   height: 5vh;
+  justify-content: space-around;
   .guardian-name { font-size: 1.5rem; }
   .tribal-name { font-size: 1.2rem; }
 }
