Changing yellow in the higher level rolls.

--- a/src/routes/roll/Roll.module.scss
+++ b/src/routes/roll/Roll.module.scss
@@ -28,7 +28,7 @@ body {
 }
 
 .yellow-background {
-  background: radial-gradient(ellipse at center, #fee90b 40%,#AD7200 100%);
+  background: radial-gradient(ellipse at center, #e0dba5 40%,#AD7200 100%);
   color: #1A1100;
 }
 
